# deep-vqa-framework

./: .gitignore  DISCLAIMER.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ci-troubleshooting.md
.github/workflows/: ci.yml  dataset-script-check.yml  lock-check.yml
config/: basic.yaml
deploy/: infer.py
docs/: Cloud_Platform_Rental_Guide.md  GUIDE.md  pipeline.html
frontend/: index.html
scripts/: archive_result.sh  cache_clean.sh  ci_test_smart_extract.sh  manage_data.sh  setup_env.sh  setup_links.sh  system_check.sh
src/: main.py
src/core/: engine.py  trainer.py
src/data/: data_eda.py
src/data/eda/: split.py
src/utils/: config_loader.py
