[project]
name = "deep-vqa-framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "decord>=0.6.0",
    "gdown>=6.0.0",
    "git-filter-repo>=2.47.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
