[project]
name = "deep-vqa-framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "decord>=0.6.0",
    "gdown>=6.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]


[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
select = ["E", "F", "W", "I"]


# E501: line too long (handled by formatter)
# F401: unused imports (models may use star imports)
ignore = [
    "E501",
    "F401",
]


[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["F401"]


[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
